bridge/base/execution-deployment.yaml
#! execution-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: execution
    namespace: titan-finance-
    labels:
        com.docker.compose.project: titan-finance-
        com.docker.compose.service: execution
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: titan-finance-
            com.docker.compose.service: execution
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: titan-finance-
                com.docker.compose.service: execution
                com.docker.compose.network.titan_net: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: titan-execution
                  image: titan-finance--execution
                  imagePullPolicy: IfNotPresent
