bridge/base/gateway-deployment.yaml
#! gateway-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: gateway
    namespace: titan-finance-
    labels:
        com.docker.compose.project: titan-finance-
        com.docker.compose.service: gateway
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: titan-finance-
            com.docker.compose.service: gateway
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: titan-finance-
                com.docker.compose.service: gateway
                com.docker.compose.network.titan_net: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: titan-gateway
                  image: titan-finance--gateway
                  imagePullPolicy: IfNotPresent
