bridge/base/signal-deployment.yaml
#! signal-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: signal
    namespace: titan-finance-
    labels:
        com.docker.compose.project: titan-finance-
        com.docker.compose.service: signal
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: titan-finance-
            com.docker.compose.service: signal
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: titan-finance-
                com.docker.compose.service: signal
                com.docker.compose.network.titan_net: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: titan-signal
                  image: titan-finance--signal
                  imagePullPolicy: IfNotPresent
