bridge/base/questdb-expose.yaml
#! questdb-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: questdb
    namespace: titan-finance-
    labels:
        com.docker.compose.project: titan-finance-
        com.docker.compose.service: questdb
spec:
    selector:
        com.docker.compose.project: titan-finance-
        com.docker.compose.service: questdb
    ports:
        - name: questdb-8812
          port: 8812
          targetPort: questdb-8812
        - name: questdb-9000
          port: 9000
          targetPort: questdb-9000
        - name: questdb-9009
          port: 9009
          targetPort: questdb-9009
