bridge/base/redis-expose.yaml
#! redis-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: redis
    namespace: titan-finance-
    labels:
        com.docker.compose.project: titan-finance-
        com.docker.compose.service: redis
spec:
    selector:
        com.docker.compose.project: titan-finance-
        com.docker.compose.service: redis
    ports:
        - name: redis-6379
          port: 6379
          targetPort: redis-6379
