bridge/base/titan_net-network-policy.yaml
#! titan_net-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: titan-net-network-policy
    namespace: titan-finance-
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.titan_net: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.titan_net: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.titan_net: "true"
